[package]
name = "impl-vol"
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.software>"]
description = "Implied volatility"
documentation = "https://docs.rs/impl-vol"
repository = "https://github.com/DariuszDepta/impl-vol.git"
license = "MIT"
edition = "2018"

[features]
default = [
  "ENABLE_SWITCHING_THE_OUTPUT_TO_ITERATION_COUNT",
  "ENABLE_CHANGING_THE_HOUSEHOLDER_METHOD_ORDER"
]

ENABLE_SWITCHING_THE_OUTPUT_TO_ITERATION_COUNT = []
ENABLE_CHANGING_THE_HOUSEHOLDER_METHOD_ORDER = []

[dependencies]
lazy_static = "1.4.0"